# KI-Kompass

./: .gitignore  .replit  DEPLOYMENT.md  api_routes.py  app.py  cookies.txt  database.py  main.py  models.py  pyproject.toml  quick_test.py  readme.md  render.yaml  replit.md  replit_auth.py  routes.py  run_tests.py  test_api.py  test_report.json
attached_assets/: Pasted--2025-04-06-14-47-57-0000-3109-ERROR-Error-handling-request-api-chat-Traceback-most-recent--1743954440101.txt  Pasted--2025-04-06-16-29-38-0000-6088-CRITICAL-WORKER-TIMEOUT-pid-6099-2025-04-06-16-29-38-0000--1743956993617.txt  Pasted--Initial-Idea-Description-We-are-developing-an-MVP-for-a-relocation-and-integration-assista-1743946028061.txt  Pasted-ERROR-app-Exception-on-GET-Traceback-most-recent-call-last-File-home-runner-workspace--1751187807711_1751187807712.txt  Pasted-ERROR-app-Exception-on-profile-GET-Traceback-most-recent-call-last-File-home-runner-work-1743954962501.txt  Pasted-Human-How-can-I-find-an-apartment-in-Munich-INFO-httpx-HTTP-Request-POST-https-api-featherless-1743955754383.txt  Pasted-Prompt-after-formatting-You-are-KI-Kompass-an-AI-assistant-specializing-in-helping-people-r-1743956422008.txt  Pasted-RROR-app-Exception-on-auth-replit-auth-authorized-GET-Traceback-most-recent-call-last-File-1751187374027_1751187374029.txt  Pasted-jinja2-exceptions-UndefinedError-now-is-undefined-ERROR-app-Exception-on-dashboard-GET-Trace-1743949552502.txt  Pasted-psycopg2-errors-UndefinedTable-relation-users-does-not-exist-LINE-2-FROM-users--1751187559742_1751187559743.txt
auth/: __init__.py  dev.py  replit.py  supabase.py
blueprints/: api.py  demo.py  pages.py
controllers/: __init__.py
data/: action_steps.py
routers/: __init__.py  chat.py  pipelines.py  users.py
services/: ai_assistant.py  bootstrap.py  database_optimization.py  direct_llm.py  email_service.py  error_handler.py  input_validation.py  knowledge_refresh.py  llm_engine.py  notification_service.py  pipeline_engine.py  reminders.py  tasks.py  web_scraper.py
templates/: 403.html  base.html  chat.html  dashboard.html  (+7 more)
(+23 files in other folders)
