[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "django-routers>=0.2",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "langchain-community>=0.3.21",
    "langchain>=0.3.23",
    "openai>=1.70.0",
    "psycopg2-binary>=2.9.10",
    "qdrant-client>=1.13.3",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "langchain-openai>=0.3.12",
    "fastembed>=0.6.0",
    "trafilatura>=2.0.0",
]
