[project]
name = "ki-kompass"
version = "0.2.0"
description = "Munich relocation and integration assistant"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-login>=0.6.3",
    "flask-dance>=7.1.0",
    "flask-wtf>=1.2.1",
    "flask-limiter>=3.5.0",
    "flask-migrate>=4.0.5",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.40",
    "werkzeug>=3.1.3",
    "oauthlib>=3.3.1",
    "pyjwt>=2.10.1",
    "requests>=2.32.0",
    "openai>=1.70.0",
    "qdrant-client>=1.15.0",
    "trafilatura>=2.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[nix]
channel = "stable-24_05"
packages = ["bash"]

[deployment]
deploymentTarget = "autoscale"
run = ["gunicorn", "--bind", "0.0.0.0:5000", "main:app"]

[workflows]
runButton = "Project"

[[workflows.workflow]]
name = "Project"
mode = "parallel"
author = "agent"

[[workflows.workflow.tasks]]
task = "workflow.run"
args = "Start application"

[[workflows.workflow]]
name = "Start application"
author = "agent"

[workflows.workflow.metadata]
agentRequireRestartOnSave = false

[[workflows.workflow.tasks]]
task = "packager.installForAll"

[[workflows.workflow.tasks]]
task = "shell.exec"
args = "gunicorn --bind 0.0.0.0:5000 --reuse-port --reload main:app"
waitForPort = 5000

[[ports]]
localPort = 5000
externalPort = 80
